refactor: reorganize project structure and enhance test scoring functionality

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "version": "0.1.0",
   "scripts": {
-    "dev": "tsx watch index.ts",
-    "start": "node --enable-source-maps dist/index.js",
+    "dev": "tsx watch src/index.ts",
+    "start": "node --enable-source-maps dist/src/index.js",
     "build": "tsc -p tsconfig.json"
   },
   "dependencies": {
