--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.5",
     "fast-xml-parser": "^4.5.0",
     "glob": "^11.0.0",
+    "yaml": "^2.8.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
